// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Building-Blocks/Dropdown DropdownAsOtprrNavItem smoke-test 1`] = `
<div class="sc-fqkvVR gRpaKO">
  <span class="sc-eqUAAy gwTtlG navBarItem"
        id="dropdown-navbar-wrapper"
  >
    <button aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Dropdown navbar"
            id="dropdown-navbar-label"
            title="Dropdown navbar"
            type="button"
            class="sc-aXZVg ipHyjz"
    >
      <span>
        Icon
      </span>
      <span class="caret"
            role="presentation"
      >
      </span>
    </button>
  </span>
</div>
`;

exports[`Building-Blocks/Dropdown DropdownWithLabel smoke-test 1`] = `
<span class="sc-eqUAAy gwTtlG"
      id="dropdown-with-label-wrapper"
>
  <button aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Dropdown with label"
          id="dropdown-with-label-label"
          title="Dropdown with label"
          type="button"
          class="sc-aXZVg ipHyjz"
  >
    <span>
      Dropdown with label
    </span>
    <span class="caret"
          role="presentation"
    >
    </span>
  </button>
</span>
`;

exports[`Building-Blocks/Dropdown DropdownWithList smoke-test 1`] = `
<span class="sc-eqUAAy gwTtlG"
      id="dropdown-with-ul-wrapper"
>
  <button aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Dropdown with ul"
          id="dropdown-with-ul-label"
          title="Dropdown with ul"
          type="button"
          class="sc-aXZVg ipHyjz"
  >
    <span>
      Dropdown with ul
    </span>
    <span class="caret"
          role="presentation"
    >
    </span>
  </button>
</span>
`;

exports[`Building-Blocks/Dropdown DropdownWithListAlignMenuLeft smoke-test 1`] = `
<span class="sc-eqUAAy gwTtlG"
      id="dropdown-with-ul-wrapper"
>
  <button aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Dropdown with ul"
          id="dropdown-with-ul-label"
          title="Dropdown with ul"
          type="button"
          class="sc-aXZVg ipHyjz"
  >
    <span>
      Dropdown with ul
    </span>
    <span class="caret"
          role="presentation"
    >
    </span>
  </button>
</span>
`;
